[project]
name = "postanalis"
version = "0.1.0"
description = "Скрипт для анализа эффективности работы моделек более сложных"
authors = [
    {name = "INovikov Home",email = "nov.ilucha@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "mlflow-skinny (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
